manifests/telemetryservice.yaml
# Copyright 2022-2026 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetryservice
spec:
  selector:
    matchLabels:
      app: telemetryservice
  #replicas: 1
  template:
    metadata:
      labels:
        app: telemetryservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: frontend
          image: labs.etsi.org:5050/tfs/controller/telemetry-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 30050
            - containerPort: 9192
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:30050"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:30050"]
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
        - name: backend
          image: labs.etsi.org:5050/tfs/controller/telemetry-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 30060
            - containerPort: 9193
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:30060"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:30060"]
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: telemetryservice
  labels:
    app: telemetryservice
spec:
  type: LoadBalancer
  loadBalancerIP: _LOAD_BALANCER_IP_
  externalTrafficPolicy: Local
  selector:
    app: telemetryservice
  ports:
    - name: dnsudp
      protocol: UDP
      port: 12345
      targetPort: 12345
    - name: grpc
      protocol: TCP
      port: 30050
      targetPort: 30050
    - name: grpc-backend
      protocol: TCP
      port: 30060
      targetPort: 30060
    - name: metrics-frontend
      protocol: TCP
      port: 9192
      targetPort: 9192
    - name: metrics-backend
      protocol: TCP
      port: 9193
      targetPort: 9193
