manifests/ztp_server.yaml
# Copyright 2022-2026 ETSI SDG TeraFlowSDN (TFS) (https://tfs.etsi.org/)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ztp_serverservice
spec:
  selector:
    matchLabels:
      app: ztp_serverservice
  #replicas: 1
  template:
    metadata:
      labels:
        app: ztp_serverservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: labs.etsi.org:5050/tfs/controller/ztp_server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
            - containerPort: 5051
            - containerPort: 9192
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5051"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:5051"]
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ztp_serverservice
  labels:
    app: ztp_serverservice
spec:
  type: ClusterIP
  selector:
    app: ztp_serverservice
  ports:
    - name: http
      protocol: TCP
      port: 8005
      targetPort: 8005
    - name: grpc
      protocol: TCP
      port: 5051
      targetPort: 5051
    - name: metrics
      protocol: TCP
      port: 9192
      targetPort: 9192
